--- a/TodoChallenges.ipynb
+++ b/TodoChallenges.ipynb
@@ -30,11 +30,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-6"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "# Write your answer here\n",
+    "6*(1-2)"
    ]
   },
   {
@@ -46,11 +58,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All work and no play makes Jack a dull boy\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "# Write your answer here\n",
+    "list=\"All work and no play makes Jack a dull boy\".split()\n",
+    "a=list[0]\n",
+    "b=list[1]\n",
+    "c=list[2]\n",
+    "d=list[3]\n",
+    "e=list[4]\n",
+    "f=list[5]\n",
+    "g=list[6]\n",
+    "h=list[7]\n",
+    "i=list[8]\n",
+    "j=list[9]\n",
+    "print(a +\" \"+b+\" \"+c+\" \"+d+\" \"+e+\" \"+f+\" \"+g+\" \"+h+\" \"+i+\" \"+j)"
    ]
   },
   {
@@ -64,13 +96,14 @@
     "\n",
     "x = x + 1\n",
     "#write here your shorthand notation\n",
+    "x +=1\n",
     "\n",
     "y = y * 2\n",
     "#write here your shorthand notation\n",
-    "\n",
+    "y *=2\n",
     "z = z + (y * 2)\n",
     "#write here your shorthand notation\n",
-    "\n"
+    "z +=(y *=2)\n"
    ]
   },
   {
@@ -83,11 +116,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "267.94666666666666"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "# Write your answer here\n",
+    "def areaOfSphere(r):\n",
+    "    \n",
+    "    A=4/3*(3.14*r*r)\n",
+    "    return A\n",
+    "areaOfSphere(8)\n",
+    "    "
    ]
   },
   {
@@ -100,11 +150,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "# Write your answer here\n",
+    "carname=\"volvo\"\n",
+    "print(len(carname))"
    ]
   },
   {
@@ -135,11 +195,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "39\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'>=' not supported between instances of 'str' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-811a54195c13>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Write your answer here\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mmarks\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mif\u001b[0m \u001b[0mmarks\u001b[0m\u001b[1;33m>=\u001b[0m\u001b[1;36m90\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[0mgrade\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"A\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgrade\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: '>=' not supported between instances of 'str' and 'int'"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "# Write your answer here\n",
+    "marks=input()\n",
+    "if marks>=90:\n",
+    "    grade=\"A\"\n",
+    "    print(grade)\n",
+    "elif 89>=marks>=80:\n",
+    "    grade=\"B\"\n",
+    "    print(grade)\n",
+    "elif 79>=marks>=70:\n",
+    "    grade=\"C\"\n",
+    "    print(grade)\n",
+    "elif 69>=marks>=60:\n",
+    "    grade=\"D\"\n",
+    "    print(grade)\n",
+    "elif marks<=60:\n",
+    "    grade=\"F\"\n",
+    "    print(grade)"
    ]
   },
   {
@@ -151,11 +246,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'<=' not supported between instances of 'str' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-11-d8e8f98e557f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Write your answer\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mage\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mif\u001b[0m \u001b[0mage\u001b[0m\u001b[1;33m<=\u001b[0m\u001b[1;36m18\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mage\u001b[0m\u001b[1;33m>=\u001b[0m\u001b[1;36m80\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"You are under Age\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: '<=' not supported between instances of 'str' and 'int'"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "# Write your answer\n",
+    "age = input()\n",
+    "if age<=18 and age>=80:\n",
+    "    print(\"You are under Age\")\n",
+    "else:\n",
+    "    print(\"You are of age\")\n"
    ]
   },
   {
@@ -190,11 +309,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your answer here"
+    "# Write your answer here\n",
+    "student_marks_dict={\n",
+    "    \"mary\":67,\n",
+    "    \"kate\":89,\n",
+    "    \"john\":74,\n",
+    "    \"pam\":90,\n",
+    "    \"sathe\":50,\n",
+    "    \"bill\":50,\n",
+    "    \"kristy\":65}      "
    ]
   },
   {
@@ -206,11 +333,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "# Write your answer here\n",
+    "student_marks_dict[\"sathe\"]"
    ]
   },
   {
@@ -222,11 +361,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['mary', 'kate', 'john', 'pam', 'sathe', 'bill', 'kristy'])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "# Write your answer here\n",
+    "student_marks_dict.keys()"
    ]
   },
   {
@@ -238,11 +389,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'mary': 67, 'kate': 89, 'john': 74, 'pam': 90, 'sathe': 50, 'bill': 78, 'kristy': 65}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "# Write your answer here\n",
+    "student_marks_dict[\"bill\"]=78\n",
+    "print(student_marks_dict)"
    ]
   },
   {
@@ -273,7 +434,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your answer here"
+    "# Write your answer here\n",
+    "list1 = [12, 15, 32, 42, 55, 75, 122, 132, 150, 180, 200]\n",
+    "for num in list1:\n",
+    "    if num<150 and num%5==0:\n",
+    "          print(num)\n",
+    "    "
    ]
   },
   {
@@ -303,13 +469,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your answer here"
+    "# Write your answer here\n",
+    "num =input()\n",
+    "def even(num):\n",
+    "    if num%2==0\n",
+    "        print(\"true\")\n",
+    "     else\n",
+    "        print(\"false\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "Challenge2: Write a Python program to filter(even or oddd) a list of integers(20-35) using Lambda.\n",
     "Hint: Use the range() method"
    ]
@@ -320,7 +493,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your answer here"
+    "# Write your answer here\n",
+    "mylist=list(range(20,36))\n",
+    "for i in mylist:\n",
+    "    lambda x:x%2==0"
    ]
   }
  ],
@@ -340,7 +516,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
