--- a/TodoChallenges.ipynb
+++ b/TodoChallenges.ipynb
@@ -195,31 +195,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "39\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'>=' not supported between instances of 'str' and 'int'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-7-811a54195c13>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Write your answer here\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mmarks\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mif\u001b[0m \u001b[0mmarks\u001b[0m\u001b[1;33m>=\u001b[0m\u001b[1;36m90\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[0mgrade\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"A\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgrade\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: '>=' not supported between instances of 'str' and 'int'"
+      "F\n"
      ]
     }
    ],
    "source": [
     "# Write your answer here\n",
-    "marks=input()\n",
+    "marks=56\n",
     "if marks>=90:\n",
     "    grade=\"A\"\n",
     "    print(grade)\n",
@@ -246,33 +235,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "16\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'<=' not supported between instances of 'str' and 'int'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-11-d8e8f98e557f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Write your answer\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mage\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mif\u001b[0m \u001b[0mage\u001b[0m\u001b[1;33m<=\u001b[0m\u001b[1;36m18\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mage\u001b[0m\u001b[1;33m>=\u001b[0m\u001b[1;36m80\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"You are under Age\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: '<=' not supported between instances of 'str' and 'int'"
+      "You are not of  Age\n"
      ]
     }
    ],
    "source": [
     "# Write your answer\n",
-    "age = input()\n",
-    "if age<=18 and age>=80:\n",
-    "    print(\"You are under Age\")\n",
+    "age = 99\n",
+    "if (age <=18 or age >=80):\n",
+    "    print(\"You are not of  Age\")\n",
     "else:\n",
     "    print(\"You are of age\")\n"
    ]
@@ -309,9 +287,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'mary': 67,\n",
+       " 'kate': 89,\n",
+       " 'john': 74,\n",
+       " 'pam': 90,\n",
+       " 'sathe': 50,\n",
+       " 'bill': 50,\n",
+       " 'kristy': 65}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Write your answer here\n",
     "student_marks_dict={\n",
@@ -321,7 +316,8 @@
     "    \"pam\":90,\n",
     "    \"sathe\":50,\n",
     "    \"bill\":50,\n",
-    "    \"kristy\":65}      "
+    "    \"kristy\":65}  \n",
+    "student_marks_dict\n"
    ]
   },
   {
@@ -430,14 +426,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "55\n",
+      "75\n",
+      "150\n"
+     ]
+    }
+   ],
    "source": [
     "# Write your answer here\n",
     "list1 = [12, 15, 32, 42, 55, 75, 122, 132, 150, 180, 200]\n",
     "for num in list1:\n",
-    "    if num<150 and num%5==0:\n",
+    "    if (num<=150 and num%5==0):\n",
     "          print(num)\n",
     "    "
    ]
@@ -465,17 +472,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'true'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Write your answer here\n",
-    "num =input()\n",
+    "a=6\n",
     "def even(num):\n",
-    "    if num%2==0\n",
-    "        print(\"true\")\n",
-    "     else\n",
-    "        print(\"false\")"
+    "    if (num % 2 == 0):\n",
+    "        return \"true\"\n",
+    "    else:\n",
+    "        return \"false\"\n",
+    "even(a) "
    ]
   },
   {
@@ -489,15 +508,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "even\n",
+      "odd\n",
+      "even\n",
+      "odd\n",
+      "even\n",
+      "odd\n",
+      "even\n",
+      "odd\n",
+      "even\n",
+      "odd\n",
+      "even\n",
+      "odd\n",
+      "even\n",
+      "odd\n",
+      "even\n",
+      "odd\n"
+     ]
+    }
+   ],
    "source": [
     "# Write your answer here\n",
     "mylist=list(range(20,36))\n",
     "for i in mylist:\n",
-    "    lambda x:x%2==0"
+    "    c=lambda i: \"even\" if (i % 2==0) else \"odd\"\n",
+    "    print(c(i))\n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
