--- a/TodoChallenges.ipynb
+++ b/TodoChallenges.ipynb
@@ -195,20 +195,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "44\n",
       "F\n"
      ]
     }
    ],
    "source": [
     "# Write your answer here\n",
-    "marks=56\n",
+    "marks=int(input())\n",
     "if marks>=90:\n",
     "    grade=\"A\"\n",
     "    print(grade)\n",
@@ -235,20 +236,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "333\n",
       "You are not of  Age\n"
      ]
     }
    ],
    "source": [
     "# Write your answer\n",
-    "age = 99\n",
+    "age = int(input())\n",
     "if (age <=18 or age >=80):\n",
     "    print(\"You are not of  Age\")\n",
     "else:\n",
@@ -472,23 +474,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'true'"
+       "'false'"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Write your answer here\n",
-    "a=6\n",
+    "a=int(input())\n",
     "def even(num):\n",
     "    if (num % 2 == 0):\n",
     "        return \"true\"\n",
