--- a/TodoChallenges.ipynb
+++ b/TodoChallenges.ipynb
@@ -34,7 +34,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your answer here"
+    "value = 6 * (1-2)\n",
+    "# print(value)"
    ]
   },
   {
@@ -50,7 +51,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your answer here"
+    "a, b, c, d, e, f, g, h, i, j = \"All\", \"work\", \"and\", \"no\", \"play\", \"makes\", \"Jack\", \"a\", \"dull\", \"boy\"\n",
+    "\n",
+    "# print(a + \" \" + b + \" \" + c + \" \" + d + \" \" + e + \" \" + f + \" \" + g + \" \" + h + \" \" + i + \" \" + j + \".\")\n",
+    "# print(\"%s %s %s %s %s %s %s %s %s %s.\" % (a, b, c, d, e, f, g, h, i, j))\n",
+    "print((\"{} {} {} {} {} {} {} {} {} {}.\").format(a, b, c, d, e, f, g, h, i, j))"
    ]
   },
   {
@@ -63,13 +68,16 @@
     "z = 4\n",
     "\n",
     "x = x + 1\n",
-    "#write here your shorthand notation\n",
+    "\n",
+    "x += 1\n",
     "\n",
     "y = y * 2\n",
-    "#write here your shorthand notation\n",
+    "\n",
+    "y *= 2\n",
     "\n",
     "z = z + (y * 2)\n",
-    "#write here your shorthand notation\n",
+    "\n",
+    "z += y * 2\n",
     "\n"
    ]
   },
@@ -87,7 +95,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your answer here"
+    "π = 3.14\n",
+    "r = 8\n",
+    "V = (4/3) * π * pow(r,3)\n",
+    "print(V)\n",
+    "\n",
+    "# def getArea(r):\n",
+    "# V = (4/3) * π * pow(r,3)\n",
+    "#     return V\n",
+    "# print(getArea(8))\n",
+    "\n"
    ]
   },
   {
@@ -104,7 +121,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your answer here"
+    "carname = \"Volvo\"\n",
+    "noOfChars = len(carname)\n",
+    "print(noOfChars)"
    ]
   },
   {
@@ -139,7 +158,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your answer here"
+    "print(\"Enter your marks:\")\n",
+    "marks = int(input())\n",
+    "\n",
+    "print(\"Your mark is {}\".format(marks))\n",
+    "\n",
+    "if (60 <= marks <= 79):\n",
+    "    grade = \"D\"\n",
+    "elif (70 <= marks <= 79):\n",
+    "    grade = \"C\"\n",
+    "elif (80 <= marks <= 89):\n",
+    "    grade = \"B\"\n",
+    "elif (marks >= 90):\n",
+    "    grade = \"A\"\n",
+    "else:\n",
+    "    grade = \"F\"\n",
+    "    \n",
+    "print(\"Grade: {}\".format(grade))"
    ]
   },
   {
@@ -155,7 +190,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your answer here"
+    "print(\"Enter age\")\n",
+    "\n",
+    "age = int(input())\n",
+    "\n",
+    "print(\"Restricted\" if(age < 18 or age > 80) else \"Pass\")"
    ]
   },
   {
@@ -194,7 +233,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your answer here"
+    "student_marks_dict = {\"Mary\" : 67, \"Kate\" : 89, \"John\" : 74, \"Pam\" : 90, \"Sathe\" : 50, \"Bill\" : 50, \"Kristy\" : 65}"
    ]
   },
   {
@@ -210,7 +249,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your answer here"
+    "student_marks_dict.get(\"Kristy\")\n",
+    "# student_marks_dict[\"Kristy\"]"
    ]
   },
   {
@@ -226,7 +266,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your answer here"
+    "student_marks_dict.keys()"
    ]
   },
   {
@@ -242,7 +282,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your answer here"
+    "student_marks_dict[\"Bill\"] = 78\n",
+    "# print(student_marks_dict)"
    ]
   },
   {
@@ -273,7 +314,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your answer here"
+    "list1 = [12, 15, 32, 42, 55, 75, 122, 132, 150, 180, 200]\n",
+    "[x for x in list1 if (x % 5 == 0)]"
    ]
   },
   {
@@ -303,7 +345,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your answer here"
+    "def even(number):\n",
+    "    if(number % 2 == 0):\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "# even(9)"
    ]
   },
   {
@@ -320,8 +367,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your answer here"
+    "list2 = range(20, 36)\n",
+    "filters = filter(lambda x : x % 2 != 0, list2)\n",
+    "# print(list(filters))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -340,7 +403,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
