--- a/TodoChallenges.ipynb
+++ b/TodoChallenges.ipynb
@@ -30,11 +30,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-6\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "print(6*(1-2))"
    ]
   },
   {
@@ -46,11 +54,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All work and no play makes Jack a dull boy.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "a = \"All\"\n",
+    "b = \"work\"\n",
+    "c = \"and\"\n",
+    "d = \"no\"\n",
+    "e = \"play\"\n",
+    "f = \"makes\"\n",
+    "g = \"Jack\"\n",
+    "h = \"a\"\n",
+    "i = \"dull\"\n",
+    "j = \"boy.\"\n",
+    "print(a,b,c,d,e,f,g,h,i,j)"
    ]
   },
   {
@@ -63,13 +89,13 @@
     "z = 4\n",
     "\n",
     "x = x + 1\n",
-    "#write here your shorthand notation\n",
+    "x+=1\n",
     "\n",
-    "y = y * 2\n",
-    "#write here your shorthand notation\n",
+    "y = y + 2\n",
+    "y*=2\n",
     "\n",
     "z = z + (y * 2)\n",
-    "#write here your shorthand notation\n",
+    "z+=(y * 2)\n",
     "\n"
    ]
   },
@@ -83,11 +109,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2143.5733333333333\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "pi = 3.14\n",
+    "radius = 8\n",
+    "V = (4/3) * pi * radius**3\n",
+    "print(V)"
    ]
   },
   {
@@ -100,11 +137,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "carname = \"Volvo\"\n",
+    "print(len(carname))"
    ]
   },
   {
@@ -135,11 +181,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "a = 75\n",
+    "if (a >= 90):\n",
+    "    print(\"A\")\n",
+    "elif (a >= 80 and a <= 89):\n",
+    "    print(\"B\")\n",
+    "elif (a >= 70 and a <= 79):\n",
+    "    print(\"C\")\n",
+    "elif (a >= 60 and a <= 69):\n",
+    "    print(\"D\")\n",
+    "else:\n",
+    "    print(\"F\")"
    ]
   },
   {
@@ -151,11 +215,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eligible\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "x = 22\n",
+    "if (x >= 18 and x <= 80):\n",
+    "    print(\"Eligible\")\n",
+    "else:\n",
+    "    print(\"Not Eligible\")"
    ]
   },
   {
@@ -190,11 +266,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Mary': 67, 'Kate': 89, 'John': 74, 'Pam': 90, 'Sathe': 50, 'Bill': 50, 'Kristy': 65}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "student_marks_dict = {\n",
+    "    \"Mary\": 67,\n",
+    "    \"Kate\": 89,\n",
+    "    \"John\": 74,\n",
+    "    \"Pam\": 90,\n",
+    "    \"Sathe\": 50,\n",
+    "    \"Bill\": 50,\n",
+    "    \"Kristy\": 65\n",
+    "}\n",
+    "print(student_marks_dict)"
    ]
   },
   {
@@ -206,11 +299,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "student_marks_dict[\"Sathe\"]"
    ]
   },
   {
@@ -222,11 +326,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['Mary', 'Kate', 'John', 'Pam', 'Sathe', 'Bill', 'Kristy'])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "student_marks_dict.keys()"
    ]
   },
   {
@@ -238,11 +353,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "78"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "student_marks_dict[\"Bill\"] = 78\n",
+    "student_marks_dict[\"Bill\"]"
    ]
   },
   {
@@ -269,11 +396,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "55\n",
+      "75\n",
+      "150\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "list1 = [12, 15, 32, 42, 55, 75, 122, 132, 150, 180, 200]\n",
+    "for i in list1:\n",
+    "    if (i % 5 == 0 and i <= 150):\n",
+    "        print(i)"
    ]
   },
   {
@@ -299,11 +440,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "def even(y):\n",
+    "    if (y % 2 == 0):\n",
+    "        print(\"true\")\n",
+    "    else:\n",
+    "        print(\"false\")\n",
+    "\n",
+    "even(10)\n"
    ]
   },
   {
@@ -316,12 +471,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Even : [20, 22, 24, 26, 28, 30, 32, 34]\n",
+      "Odd : [21, 23, 25, 27, 29, 31, 33, 35]\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = range(20,36)\n",
+    "even = list(filter(lambda x: (x%2 == 0), y))\n",
+    "odd = list(filter(lambda x : (x%2 != 0), y))\n",
+    "print(\"Even :\", even)\n",
+    "print(\"Odd :\", odd)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Write your answer here"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -340,7 +522,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
