Update condition from 79 to 69

--- a/TodoChallenges.ipynb
+++ b/TodoChallenges.ipynb
@@ -154,16 +154,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your marks:\n",
+      "76\n",
+      "Your mark is 76\n",
+      "Grade: C\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Enter your marks:\")\n",
     "marks = int(input())\n",
     "\n",
     "print(\"Your mark is {}\".format(marks))\n",
     "\n",
-    "if (60 <= marks <= 79):\n",
+    "if (60 <= marks <= 69):\n",
     "    grade = \"D\"\n",
     "elif (70 <= marks <= 79):\n",
     "    grade = \"C\"\n",
