Completed Week 2 Assignment

--- a/TodoChallenges.ipynb
+++ b/TodoChallenges.ipynb
@@ -30,11 +30,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-6"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "6 * (1-2)"
    ]
   },
   {
@@ -46,11 +57,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All work and no play makes Jack a dull boy\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "original_sentence = \"All work and no play makes Jack a dull boy\"\n",
+    "word_one = \"All\"\n",
+    "word_two = \"work\"\n",
+    "word_three = \"and\"\n",
+    "word_four = \"no\"\n",
+    "word_five = \"play\"\n",
+    "word_six = \"makes\"\n",
+    "word_seven = \"Jack\"\n",
+    "word_eight = \"a\"\n",
+    "word_nine = \"dull\"\n",
+    "word_ten = \"boy\"\n",
+    "\n",
+    "print(word_one, word_two, word_three, word_four, word_five, word_six, word_seven, word_eight, word_nine, word_ten)"
    ]
   },
   {
@@ -83,11 +114,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "330.2308693333333\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "constant = 4/3\n",
+    "pi  = 3.14\n",
+    "radius = 8\n",
+    "\n",
+    "volume = constant * (pi ** 3) * radius\n",
+    "print (volume)"
    ]
   },
   {
@@ -100,11 +144,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "carname = \"volvo\"\n",
+    "print(len(carname))"
    ]
   },
   {
@@ -135,11 +188,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grade: F\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "mark = 50\n",
+    "if mark >= 90:\n",
+    "    print(\"Grade: A\")\n",
+    "elif mark >= 80 and mark < 90:\n",
+    "    print(\"Grade: B\")\n",
+    "elif mark >= 70 and mark < 80:\n",
+    "    print(\"Grade: C\")\n",
+    "elif mark >= 60 and mark < 70:\n",
+    "    print (\"Grade: D\")\n",
+    "else:\n",
+    "    print(\"Grade: F\")"
    ]
   },
   {
@@ -151,11 +222,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Access not granted\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "age = 90\n",
+    "if age < 18:\n",
+    "    print(\"Access not granted\")\n",
+    "elif age > 80:\n",
+    "    print(\"Access not granted\")\n",
+    "else:\n",
+    "    print(\"Access granted\")"
    ]
   },
   {
@@ -190,11 +275,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your answer here"
+    "student_marks_dict = {\"Mary\": 67, \"Kate\": 89, \"John\": 74, \"Pam\": 90, \"Sathe\": 50, \"Bill\": 50, \"Kristy\": 65}"
    ]
   },
   {
@@ -206,11 +291,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "student_marks_dict = {\"Mary\": 67, \"Kate\": 89, \"John\": 74, \"Pam\": 90, \"Sathe\": 50, \"Bill\": 50, \"Kristy\": 65}\n",
+    "print(student_marks_dict[\"Sathe\"])"
    ]
   },
   {
@@ -222,11 +316,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mary\n",
+      "Kate\n",
+      "John\n",
+      "Pam\n",
+      "Sathe\n",
+      "Bill\n",
+      "Kristy\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "student_marks_dict = {\"Mary\": 67, \"Kate\": 89, \"John\": 74, \"Pam\": 90, \"Sathe\": 50, \"Bill\": 50, \"Kristy\": 65}\n",
+    "for key in student_marks_dict:\n",
+    "    print(key)"
    ]
   },
   {
@@ -238,11 +348,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Mary': 67, 'Kate': 89, 'John': 74, 'Pam': 90, 'Sathe': 50, 'Bill': 78, 'Kristy': 65}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "student_marks_dict = {\"Mary\": 67, \"Kate\": 89, \"John\": 74, \"Pam\": 90, \"Sathe\": 50, \"Bill\": 50, \"Kristy\": 65}\n",
+    "student_marks_dict[\"Bill\"] = 78\n",
+    "\n",
+    "print(student_marks_dict)"
    ]
   },
   {
@@ -269,11 +390,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "55\n",
+      "75\n",
+      "150\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "list1 = [12, 15, 32, 42, 55, 75, 122, 132, 150, 180, 200]\n",
+    "\n",
+    "count = 0\n",
+    "\n",
+    "while count < len(list1):\n",
+    "    if list1[count] > 150:\n",
+    "        break\n",
+    "    elif list1[count]%5 == 0:\n",
+    "        print(list1[count])\n",
+    "    count += 1"
    ]
   },
   {
@@ -299,11 +440,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "def even (number):\n",
+    "    if number%2 == 0:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "    \n",
+    "even(28)"
    ]
   },
   {
@@ -316,12 +474,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[20, 22, 24, 26, 28, 30, 32, 34] [21, 23, 25, 27, 29, 31, 33, 35]\n"
+     ]
+    }
+   ],
+   "source": [
+    "even_numbers = filter(lambda x: x%2 == 0, range(20,36))\n",
+    "odd_numbers = filter(lambda x: x%2 != 0, range(20,36))\n",
+    "\n",
+    "print(list(even_numbers), list(odd_numbers))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Write your answer here"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -340,7 +516,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
