solutions to the data science assignment for week two

--- a/TodoChallenges.ipynb
+++ b/TodoChallenges.ipynb
@@ -30,11 +30,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-6"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "# Write your answer here\n",
+    "6*(1-2)"
    ]
   },
   {
@@ -46,11 +58,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All work and no play makes Jack a dull boy\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "# Write your answer here\n",
+    "a = \"All\"\n",
+    "b = \"work\"\n",
+    "c = \"and\"\n",
+    "d = \"no\"\n",
+    "e = \"play\"\n",
+    "f = \"makes\"\n",
+    "g =\"Jack\"\n",
+    "h =\"a\"\n",
+    "i = \"dull\"\n",
+    "j = \"boy\"\n",
+    "sentence = a +\" \"+b+\" \"+c+\" \"+d+\" \"+e+\" \"+f+\" \"+g+\" \"+h+\" \"+i+\" \"+j\n",
+    "print(sentence)\n"
    ]
   },
   {
@@ -64,12 +96,15 @@
     "\n",
     "x = x + 1\n",
     "#write here your shorthand notation\n",
+    "x+=1\n",
     "\n",
     "y = y * 2\n",
     "#write here your shorthand notation\n",
+    "y*=2\n",
     "\n",
     "z = z + (y * 2)\n",
     "#write here your shorthand notation\n",
+    "z+=(y*2)\n",
     "\n"
    ]
   },
@@ -83,11 +118,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "803.84\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "# Write your answer here\n",
+    "pi = 3.14\n",
+    "r = 8\n",
+    "area = 4*pi*r*r\n",
+    "print(area)"
    ]
   },
   {
@@ -100,11 +147,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "# Write your answer here\n",
+    "carname = \"Volvo\"\n",
+    "print(len(carname))\n"
    ]
   },
   {
@@ -135,11 +192,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "# Write your answer here\n",
+    "marks= 79  \n",
+    "if (marks>=90):\n",
+    "    print(\"A\")\n",
+    "elif(80<marks<=89 ):\n",
+    "    print(\"B\")\n",
+    "elif(70<marks<=79):\n",
+    "    print(\"c\")\n",
+    "elif(60<marks<=79):\n",
+    "    print(\"D\")\n",
+    "else:\n",
+    "    print(\"F\")\n",
+    "    \n",
+    "    \n",
+    "    \n"
    ]
   },
   {
@@ -151,11 +230,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this content is restricted\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "# Write your answer here\n",
+    "age = 6\n",
+    "if(age<18 or age>80):\n",
+    "    print(\"this content is restricted\")\n",
+    "else:\n",
+    "    print(\"click next \")\n",
+    "  "
    ]
   },
   {
@@ -190,11 +283,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Mary': 67,\n",
+       " 'Kate': 89,\n",
+       " 'John': 74,\n",
+       " 'Pam': 90,\n",
+       " 'Sathe': 50,\n",
+       " 'Bill': 50,\n",
+       " 'Kristy': 65}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "# Write your answer here\n",
+    "student_marks_dict = {'Mary':67,'Kate':89,'John':74,'Pam':90,'Sathe':50,'Bill':50,'Kristy':65}\n",
+    "student_marks_dict "
    ]
   },
   {
@@ -206,11 +318,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "# Write your answer here\n",
+    "student_marks_dict['Sathe']"
    ]
   },
   {
@@ -222,11 +346,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['Mary', 'Kate', 'John', 'Pam', 'Sathe', 'Bill', 'Kristy'])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "# Write your answer here\n",
+    "student_marks_dict.keys()"
    ]
   },
   {
@@ -238,11 +374,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Mary': 67,\n",
+       " 'Kate': 89,\n",
+       " 'John': 74,\n",
+       " 'Pam': 90,\n",
+       " 'Sathe': 50,\n",
+       " 'Bill': 78,\n",
+       " 'Kristy': 65}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "# Write your answer here\n",
+    "student_marks_dict['Bill']=78\n",
+    "student_marks_dict"
    ]
   },
   {
@@ -269,11 +424,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "55\n",
+      "75\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "# Write your answer here\n",
+    "list1= [12,15,32,42,55,75,122,132,150,180,200]\n",
+    "for i in list1:\n",
+    "    if(i%5==0 and i<150):\n",
+    "        print(i)\n",
+    "        continue"
    ]
   },
   {
@@ -299,11 +469,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "false\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "# Write your answer here\n",
+    "def even(number):\n",
+    "    if number%2==0:\n",
+    "        return \"true\"\n",
+    "    else:\n",
+    "        return \"false\"\n",
+    "Even = even(9)\n",
+    "print(Even)"
    ]
   },
   {
@@ -316,12 +501,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20 is even\n",
+      "22 is even\n",
+      "24 is even\n",
+      "26 is even\n",
+      "28 is even\n",
+      "30 is even\n",
+      "32 is even\n",
+      "34 is even\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write your answer here\n",
+    "for i in filter(lambda w:w%2==0,range(20,35)):\n",
+    "    print(i, 'is','even' )"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Write your answer here"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -340,7 +549,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
